--- a/examples/cyberpunk-standalone/src/global.css
+++ b/examples/cyberpunk-standalone/src/global.css
@@ -123,35 +123,11 @@
     opacity: 1;
   }
   body.dark {
-    background-image: radial-gradient(
-        circle at var(--mouse-x) var(--mouse-y),
-        rgba(255, 193, 7, 0.08),
-        transparent 20vw
-      ),
-      url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(255 255 255 / 0.05)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(255 255 255 / 0.05)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
   }
 }
 
 @layer utilities {
-  .scanline-overlay::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    pointer-events: none;
-    background: linear-gradient(
-      to bottom,
-      rgba(18, 18, 18, 0) 50%,
-      rgba(0, 0, 0, 0.2) 70%,
-      rgba(18, 18, 18, 0.75)
-    );
-    animation: scanline 8s linear infinite;
-    opacity: 0.1;
-    height: 200%;
-  }
-
   .text-glitch {
     animation: text-glitch 0.3s linear infinite alternate-reverse;
   }
